--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -6,28 +6,27 @@
     android:minHeight="50dp"
     android:padding="8dp">
     <ImageView
-        android:id="@+id/urlToImage"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
+        android:id="@+id/img_thumbnail"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_marginRight="10dp" />
+        android:layout_marginEnd="10dp"
+        android:contentDescription="CONTENT DESCRIPTION" />
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
-            android:id="@+id/publishedAt"
+            android:id="@+id/tv_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:id="@+id/tv_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:id="@+id/tv_published_at"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="10dp" />
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:id="@+id/author"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_marginEnd="10dp" />
     </LinearLayout>
 </LinearLayout>
