--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:background="#FFFFFF"
         tools:context=".MainActivity">
 
         <ImageView
@@ -26,6 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="24sp"
             android:layout_marginTop="32sp"
+            android:background="#EEEEEE"
             android:layout_marginEnd="24sp"/>
     </LinearLayout>
 </ScrollView>
